[gd_scene load_steps=8 format=3 uid="uid://bg8kthbgaeoq8"]

[ext_resource type="Script" uid="uid://d3q0uxc5xd1on" path="res://scenes/object/plants/tomato.gd" id="1_06su4"]
[ext_resource type="Texture2D" uid="uid://b840fptisab27" path="res://assets/game/Objects/Basic_Plants.png" id="1_oluvs"]
[ext_resource type="PackedScene" uid="uid://lvq56788orbo" path="res://scenes/object/plants/watering_particles.tscn" id="2_06su4"]
[ext_resource type="PackedScene" uid="uid://b4notdntde4wp" path="res://scenes/object/plants/flowering_particles.tscn" id="3_0py4k"]
[ext_resource type="PackedScene" uid="uid://c2oahvkbdf4o4" path="res://scenes/object/plants/growth_cycle_component.tscn" id="4_1ivg1"]
[ext_resource type="PackedScene" uid="uid://b6vcxafwryaha" path="res://scenes/components/hurt_component.tscn" id="5_02oe0"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_26nut"]
size = Vector2(11, 8)

[node name="Tomato" type="Node2D"]
script = ExtResource("1_06su4")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(0, -5)
texture = ExtResource("1_oluvs")
hframes = 6
vframes = 2
frame = 7

[node name="WateringParticles" parent="." instance=ExtResource("2_06su4")]

[node name="FloweringParticles" parent="." instance=ExtResource("3_0py4k")]

[node name="GrowthCycleComponent" parent="." instance=ExtResource("4_1ivg1")]

[node name="HurtComponent" parent="." instance=ExtResource("5_02oe0")]
tool = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtComponent"]
position = Vector2(0.5, -1.5)
shape = SubResource("RectangleShape2D_26nut")
